--- a/style/manage-prof.css
+++ b/style/manage-prof.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding: 150px 0 ;
 }
 h1{
     font-size: 2rem;
@@ -72,36 +73,36 @@ h1{
     color: #ffffff;
 }
 .profile-tile, .fou{
-    width: 70%;
+    width: 90%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-size: cover;
+    outline: 2px solid red;
 }
 .profile-tile, .fou .bg{
-    width: 40px;
-    height: 40px;
+    width: 75px;
+    height: 75px;
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background-color: #434343;
-    margin-bottom: 50px;
+    background-color: #cfc9c9;
     padding: 25px;
 }
 .profile-tile, .fou .bg i{
     color: #222;
-    font-size: 36px;
-  
+    font-size: 40px;
 }
 .profile-tile, .fou a{
     text-decoration: none;
-    color: #ffffff;
+    color: #dcd6d6;
     font-size: 18px;
     font-weight: 800;
 }
 .profile-tile, .fou:hover{
-    background-color: #d5cece;
+    background-color: #FFFFFF;
 }
 
 .manage-profiles button{
