--- a/style/log.css
+++ b/style/log.css
@@ -194,6 +194,16 @@ header .continer .icon-fix img {
   display: none;
 }
 
+#error-message{
+  width: 90%;
+  padding: 10px;
+  margin-left: 1%;
+  /* outline: 2px solid blue; */
+  font-size: 12px;
+}
+
+
+
 footer {
   color: #ffffff;
   margin-top: 12%;
