--- a/style/style.css
+++ b/style/style.css
@@ -90,13 +90,14 @@ body {
   width: 420px;
   border-radius: 25px;
   height: 55px;
+  padding: 15px;
   border: 1px solid #ffffff;
-  background-color: #353535;
+  background-color: #fff;
   /* border: none; */
   filter: opacity(0.7);
 }
 ::-webkit-input-placeholder {
-  color: #ffffff;
+  color: #000;
 }
 
 .top-header .wrap-up .centre-fix #start {
@@ -108,6 +109,15 @@ body {
   color: #ffffff;
   font-weight: 800;
   font-size: 17px;
+}
+
+#error-msg{
+  width: 90%;
+  padding: 10px;
+  margin-left: 1%;
+  margin-top: 3%;
+  /* outline: 2px solid blue; */
+  font-size: 12px;
 }
 
 .sect-1 {
@@ -479,17 +489,18 @@ body {
   margin-top: 2%;
 }
 
-.sect-4 .inp-class #email {
+.sect-4 .inp-class #em-il {
   width: 400px;
   height: 50px;
   border-radius: 25px;
+  padding: 15px;
   border: 1px solid #ffffff;
-  background-color: #353535;
+  background-color: #fff;
   filter: opacity(0.7);
 }
 
 ::-webkit-input-placeholder {
-  color: #ffffff;
+  color: #000;
 }
 
 .sect-4 .inp-class #start {
@@ -502,6 +513,16 @@ body {
   font-weight: 800;
   font-size: 17px;
   margin-left: 6px;
+}
+
+.sect-4  #erro-msg{
+  width: 50%;
+  padding: 10px;
+  margin-left: -1%;
+  text-align: center;
+  margin-top: 3%;
+  /* outline: 2px solid blue; */
+  font-size: 12px;
 }
 
 footer {
