--- a/public/style/jobs.css
+++ b/public/style/jobs.css
@@ -18,6 +18,9 @@
     width: 100%;
     position: absolute;
   }
+  #navv video{
+    width: 100%;
+  }
   
   /* Style the navigation links*/
   nav ul {
