--- a/public/style/log.css
+++ b/public/style/log.css
@@ -383,7 +383,7 @@ footer .end-tag {
   #pswd {
     width: 280px;
     height: 50px;
-    background: #0071eb;
+    background: #fff;
     opacity: 40%;
     border: 1px solid white;
     border-radius: 5px;
